# kotlin-backend/openapi_spec.yml
@@ -44,6 +44,24 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ListCustomersSuccessResponse'
+  /product:
+    post:
+      operationId: createProduct
+      tags:
+        - products
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateProductRequestBody'
+      responses:
+        201:
+          description: Product created successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateProductSuccessResponse'
 components:
   schemas:
     SuccessResponse:
@@ -86,6 +104,21 @@ components:
               id:
                 type: string
                 format: uuid
+    CreateProductRequestBody:
+      type: object
+      required:
+        - priceGbx
+      properties:
+        priceGbx:
+          type: integer
+    CreateProductSuccessResponse:
+      type: object
+      required:
+        - productId
+      properties:
+        productId:
+          type: string
+          format: uuid
   securitySchemes:
     basicAuth:
       type: http
